--- a/PankKortRekk/src/KorttiRekisteri/LisaaKorttiGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/LisaaKorttiGUIView.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaKorttiGUIController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaKorttiGUIController">
     <top>
       <Pane prefHeight="174.0" prefWidth="668.0" BorderPane.alignment="CENTER">
          <children>
             <StringGrid layoutX="17.0" layoutY="14.0" prefHeight="116.0" prefWidth="634.0" rivit="Nimi  |  Hetu | katuosoite| postinumero | postiosoite | puhelinnumero |  sähköposti &#10;Erik |  1234 | Rantatie 6 | 0050 | Helsinki | 040678123 | erik@yahoo.com" />
-            <Button layoutX="576.0" layoutY="135.0" mnemonicParsing="false" text="Lisää Kortti" />
-            <Button layoutX="17.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Sulje" />
+            <Button layoutX="576.0" layoutY="135.0" mnemonicParsing="false" text="Lisää Kortti" onAction = "#handleLisaaKortti"/>
+            <Button fx:id="suljeNappi" layoutX="17.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Sulje" onAction = "#Lopeta" />
          </children>
       </Pane>
    </top>
