--- a/PankKortRekk/src/KorttiRekisteri/MuokkaJasenGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/MuokkaJasenGUIView.fxml
@@ -21,8 +21,8 @@
             <TextField editable="false" layoutX="10.0" layoutY="132.0" prefHeight="25.0" prefWidth="97.0" text="Postinumero" />
             <TextField editable="false" layoutX="10.0" layoutY="157.0" prefHeight="25.0" prefWidth="97.0" text="Postiosoite" />
             <TextField editable="false" layoutX="10.0" layoutY="182.0" prefHeight="25.0" prefWidth="96.0" text="Puhelinnumero" />
-            <Button layoutX="209.0" layoutY="279.0" mnemonicParsing="false" text="Tallenna" />
-            <Button layoutX="30.0" layoutY="279.0" mnemonicParsing="false" text="Peruuta" />
+            <Button layoutX="209.0" layoutY="279.0" mnemonicParsing="false" text="Tallenna" onAction ="#TestiPesti" />
+            <Button fx:id="suljeNappi" layoutX="30.0" layoutY="279.0" mnemonicParsing="false" text="Peruuta" onAction ="#Lopeta"/>
             <TextField editable="false" layoutX="69.0" layoutY="22.0" prefHeight="25.0" prefWidth="153.0" text="Muokkaa asiakkaan tietoja" />
          </children>
       </Pane>
