--- a/PankKortRekk/src/KorttiRekisteri/MuokkaaPankkiKorttiaGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/MuokkaaPankkiKorttiaGUIView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaaPankkiKorttiaGUIController">
    <children>
       <Accordion layoutX="86.0" layoutY="154.0" />
       <Accordion layoutX="190.0" layoutY="193.0" />
@@ -27,7 +27,7 @@
       <TextField layoutX="330.0" layoutY="350.0" promptText="FIXX XXXX XXXX XX" />
       <TextArea editable="false" layoutX="150.0" layoutY="391.0" prefHeight="38.0" prefWidth="88.0" text="Salasana" />
       <TextField layoutX="330.0" layoutY="398.0" promptText="XXXX" />
-      <Button layoutX="14.0" layoutY="533.0" mnemonicParsing="false" text="Peruuta" />
-      <Button layoutX="525.0" layoutY="533.0" mnemonicParsing="false" text="Tallenna" />
+      <Button fx:id="suljeNappi" layoutX="14.0" layoutY="533.0" mnemonicParsing="false" text="Peruuta" onAction = "#Lopeta" />
+      <Button layoutX="525.0" layoutY="533.0" mnemonicParsing="false" text="Tallenna" onAction = "#TestiPesti"/>
    </children>
 </Pane>
