--- a/PankKortRekk/src/KorttiRekisteri/PoistaJasenGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/PoistaJasenGUIView.fxml
@@ -2,16 +2,20 @@
 
 <?import fi.jyu.mit.fxgui.StringGrid?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.PoistaJasenGUIController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.PoistaJasenGUIController">
     <top>
-      <Pane prefHeight="174.0" prefWidth="668.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="180.0" prefWidth="750.0" BorderPane.alignment="CENTER">
          <children>
-            <StringGrid layoutX="17.0" layoutY="14.0" prefHeight="116.0" prefWidth="634.0" rivit="Nimi  |  Hetu | katuosoite| postinumero | postiosoite | puhelinnumero |  sähköposti &#10;Erik |  1234 | Rantatie 6 | 0050 | Helsinki | 040678123 | erik@yahoo.com" />
-            <Button layoutX="572.0" layoutY="135.0" mnemonicParsing="false" text="Poista jäsen" onAction = "#TestiPesti"/>
-            <Button fx:id="suljeNappi" layoutX="17.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Sulje" onAction = "#Lopeta" />
+            <StringGrid layoutX="17.0" layoutY="14.0" prefHeight="116.0" prefWidth="718.0" rivit="Nimi  |  Hetu | katuosoite| postinumero | postiosoite | puhelinnumero |  sähköposti &#10;Erik |  1234 | Rantatie 6 | 0050 | Helsinki | 040678123 | erik@yahoo.com">
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy></StringGrid>
+            <Button layoutX="661.0" layoutY="140.0" mnemonicParsing="false" onAction="#handleMuokkaaPankkiKorttiaVali" text="Poista jäsen" />
+            <Button fx:id="suljeNappi" layoutX="17.0" layoutY="140.0" mnemonicParsing="false" onAction="#Lopeta" prefHeight="25.0" prefWidth="66.0" text="Sulje" />
          </children>
       </Pane>
    </top>
