--- a/PankKortRekk/bin/KorttiRekisteri/AlkuIkkunaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/AlkuIkkunaGUIView.fxml
@@ -1,46 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.AlkuIkkunaGUIController">
+<BorderPane style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.AlkuIkkunaGUIController">
     <!-- TODO Add Nodes -->   <center>
-      <Pane prefHeight="426.0" prefWidth="584.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="200.0" prefWidth="584.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField alignment="CENTER" editable="false" prefHeight="68.0" prefWidth="584.0" text="PankkikorttiRekisteri v.0.1">
+            <TextField alignment="CENTER" editable="false" prefHeight="68.0" prefWidth="584.0" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="PankkikorttiRekisteri v.0.2">
                <font>
                   <Font size="32.0" />
                </font>
             </TextField>
-            <TextArea editable="false" layoutX="129.0" layoutY="88.0" prefHeight="22.0" prefWidth="326.0" text="Arno Korhonen &amp; Lobko Dani">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </TextArea>
-            <TextField editable="false" layoutX="57.0" layoutY="265.0" pickOnBounds="false" prefHeight="44.0" prefWidth="86.0" text="Pankki:">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="168.0" layoutY="265.0">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </TextField>
-            <Button layoutX="484.0" layoutY="344.0" mnemonicParsing="false" text="Jatka">
+            <Button fx:id="Jatka" layoutX="499.0" layoutY="142.0" mnemonicParsing="false" onAction="#SiirryPaaSivulle" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="Jatka">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button layoutX="14.0" layoutY="344.0" mnemonicParsing="false" text="Peruuta">
+            <Button fx:id="suljeNappi" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onAction="#Lopeta" style="-fx-background-color: #00008B; -fx-text-fill: white;" text="Peruuta">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
+            <Text fill="WHITE" layoutX="151.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Arno Korhonen &amp; Dani Lobko" wrappingWidth="282.13671875">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </center>
