--- a/PankKortRekk/bin/KorttiRekisteri/LisaaJasenGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/LisaaJasenGUIView.fxml
@@ -1,28 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaJasenGUIController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaJasenGUIController">
    <top>
-      <Pane prefHeight="319.0" prefWidth="306.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="362.0" prefWidth="378.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="135.0" layoutY="32.0" prefHeight="25.0" prefWidth="149.0" />
-            <TextField layoutX="136.0" layoutY="57.0" prefHeight="25.0" prefWidth="148.0" />
-            <TextField layoutX="137.0" layoutY="82.0" prefHeight="25.0" prefWidth="147.0" />
-            <TextField layoutX="135.0" layoutY="107.0" />
-            <TextField layoutX="135.0" layoutY="132.0" />
-            <TextField layoutX="135.0" layoutY="157.0" />
-            <TextField editable="false" layoutY="32.0" prefHeight="25.0" prefWidth="97.0" text="Nimi" />
-            <TextField editable="false" layoutY="57.0" prefHeight="25.0" prefWidth="98.0" text="Henkilötunnus" />
-            <TextField editable="false" layoutY="82.0" prefHeight="25.0" prefWidth="98.0" text="Katuosoite" />
-            <TextField editable="false" layoutY="107.0" prefHeight="25.0" prefWidth="97.0" text="Postinumero" />
-            <TextField editable="false" layoutY="132.0" prefHeight="25.0" prefWidth="97.0" text="Postiosoite" />
-            <TextField editable="false" layoutY="157.0" prefHeight="25.0" prefWidth="96.0" text="Puhelinnumero" />
-            <Button layoutX="209.0" layoutY="279.0" mnemonicParsing="false" text="lisää" />
-            <Button layoutX="30.0" layoutY="279.0" mnemonicParsing="false" text="peruuta" />
+            <TextField layoutX="183.0" layoutY="32.0" prefHeight="0.0" prefWidth="150.0" />
+            <TextField layoutX="183.0" layoutY="67.0" prefHeight="0.0" prefWidth="150.0" />
+            <TextField layoutX="183.0" layoutY="102.0" prefHeight="0.0" prefWidth="150.0" />
+            <TextField layoutX="183.0" layoutY="137.0" prefHeight="0.0" prefWidth="150.0" />
+            <TextField layoutX="183.0" layoutY="172.0" prefHeight="0.0" prefWidth="150.0" />
+            <TextField layoutX="183.0" layoutY="207.0" prefHeight="0.0" prefWidth="150.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="36.0" prefHeight="18.0" prefWidth="110.0" text="Nimi">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Button layoutX="284.0" layoutY="305.0" mnemonicParsing="false" onAction="#TestiPesti" text="Lisää" />
+            <Button fx:id="suljeNappi" layoutX="40.0" layoutY="305.0" mnemonicParsing="false" onAction="#Lopeta" text="Peruuta" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="71.0" prefWidth="110.0" text="Henkilötunnus">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="106.0" prefWidth="110.0" text="Katuosoite">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="141.0" prefWidth="110.0" text="Postinumero">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="176.0" prefWidth="110.0" text="Postitoimipaikka">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="211.0" prefWidth="110.0" text="Puhelinnumero">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <TextField layoutX="183.0" layoutY="243.0" prefHeight="0.0" prefWidth="150.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="247.0" prefWidth="110.0" text="Sähköposti">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
          </children>
       </Pane>
    </top>
