--- a/PankKortRekk/bin/KorttiRekisteri/LisaaKorttiGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/LisaaKorttiGUIView.fxml
@@ -2,17 +2,21 @@
 
 <?import fi.jyu.mit.fxgui.StringGrid?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaKorttiGUIController">
-    <top>
-      <Pane prefHeight="174.0" prefWidth="668.0" BorderPane.alignment="CENTER">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.LisaaKorttiGUIController">
+   <center>
+      <Pane prefHeight="180.0" prefWidth="750.0" BorderPane.alignment="CENTER">
          <children>
-            <StringGrid layoutX="17.0" layoutY="14.0" prefHeight="116.0" prefWidth="634.0" rivit="Nimi  |  Hetu | katuosoite| postinumero | postiosoite | puhelinnumero |  sähköposti &#10;Erik |  1234 | Rantatie 6 | 0050 | Helsinki | 040678123 | erik@yahoo.com" />
-            <Button layoutX="576.0" layoutY="135.0" mnemonicParsing="false" text="Lisää Kortti" />
-            <Button layoutX="17.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Sulje" />
+            <StringGrid layoutX="17.0" layoutY="14.0" prefHeight="120.0" prefWidth="720.0" rivit="Nimi  |  Hetu | katuosoite| postinumero | postiosoite | puhelinnumero |  sähköposti &#10;Erik |  1234 | Rantatie 6 | 0050 | Helsinki | 040678123 | erik@yahoo.com">
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy></StringGrid>
+            <Button layoutX="650.0" layoutY="140.0" mnemonicParsing="false" onAction="#handleLisaaKortti" text="Lisää Kortti" />
+            <Button fx:id="suljeNappi" layoutX="14.0" layoutY="140.0" mnemonicParsing="false" onAction="#Lopeta" prefHeight="25.0" prefWidth="66.0" text="Sulje" />
          </children>
       </Pane>
-   </top>
+   </center>
 </BorderPane>
