--- a/PankKortRekk/bin/KorttiRekisteri/MuokkaaPankkiKorttiaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/MuokkaaPankkiKorttiaGUIView.fxml
@@ -3,31 +3,64 @@
 <?import fi.jyu.mit.fxgui.RadioButtonChooser?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="506.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaaPankkiKorttiaGUIController">
    <children>
       <Accordion layoutX="86.0" layoutY="154.0" />
       <Accordion layoutX="190.0" layoutY="193.0" />
-      <RadioButtonChooser layoutX="318.0" layoutY="27.0" prefHeight="88.0" prefWidth="161.0" rivit="Debit&#10;Credit&#10;Yhdistelmäkortti" />
-      <TextArea editable="false" layoutX="150.0" layoutY="63.0" prefHeight="37.0" prefWidth="88.0" text="Korttityyppi" />
-      <TextArea editable="false" layoutX="150.0" layoutY="109.0" prefHeight="38.0" prefWidth="88.0" text="Päivämäärä" />
+      <RadioButtonChooser alignment="CENTER_LEFT" centerShape="false" layoutX="312.0" layoutY="22.0" prefHeight="94.0" prefWidth="161.0" rivit="Debit &#10;Credit&#10;Yhdistelmäkortti" />
+      <Label alignment="TOP_CENTER" layoutX="130.0" layoutY="60.0" prefHeight="18.0" prefWidth="150.0" text="Korttityyppi" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
       <TextField layoutX="330.0" layoutY="116.0" promptText="20XX" />
-      <TextArea editable="false" layoutX="150.0" layoutY="154.0" prefHeight="38.0" prefWidth="88.0" text="Korttinumero" />
       <TextField layoutX="330.0" layoutY="161.0" promptText="XXXX-XXXX-XXXX-XXXX" />
-      <TextArea editable="false" layoutX="150.0" layoutY="197.0" prefHeight="38.0" prefWidth="88.0" text="PIN-koodi" />
       <TextField layoutX="330.0" layoutY="204.0" promptText="XXXX" />
-      <TextArea editable="false" layoutX="150.0" layoutY="241.0" prefHeight="38.0" prefWidth="88.0" text="CVC" />
       <TextField layoutX="330.0" layoutY="248.0" promptText="XXX" />
-      <RadioButtonChooser layoutX="318.0" layoutY="279.0" prefHeight="60.0" prefWidth="149.0" rivit="Kyllä&#10;Ei" />
-      <TextArea editable="false" layoutX="150.0" layoutY="292.0" prefHeight="38.0" prefWidth="88.0" text="Lähimaksu" />
-      <TextArea editable="false" layoutX="150.0" layoutY="344.0" prefHeight="38.0" prefWidth="126.0" text="Verkkopankkitunnus" />
+      <RadioButtonChooser layoutX="312.0" layoutY="281.0" prefHeight="60.0" prefWidth="149.0" rivit="Kyllä&#10;Ei" />
       <TextField layoutX="330.0" layoutY="350.0" promptText="FIXX XXXX XXXX XX" />
-      <TextArea editable="false" layoutX="150.0" layoutY="391.0" prefHeight="38.0" prefWidth="88.0" text="Salasana" />
       <TextField layoutX="330.0" layoutY="398.0" promptText="XXXX" />
-      <Button layoutX="14.0" layoutY="533.0" mnemonicParsing="false" text="Peruuta" />
-      <Button layoutX="525.0" layoutY="533.0" mnemonicParsing="false" text="Tallenna" />
+      <Button fx:id="suljeNappi" layoutX="14.0" layoutY="467.0" mnemonicParsing="false" onAction="#Lopeta" text="Peruuta" />
+      <Button layoutX="619.0" layoutY="467.0" mnemonicParsing="false" onAction="#TestiPesti" text="Tallenna" />
+      <Label alignment="TOP_CENTER" layoutX="130.0" layoutY="116.0" prefHeight="18.0" prefWidth="150.0" text="Päivämäärä" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="130.0" layoutY="161.0" prefHeight="18.0" prefWidth="150.0" text="Korttinumero" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="131.0" layoutY="204.0" prefHeight="18.0" prefWidth="150.0" text="PIN-koodi" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="131.0" layoutY="248.0" prefHeight="18.0" prefWidth="150.0" text="CVC" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="130.0" layoutY="295.0" prefHeight="18.0" prefWidth="150.0" text="Lähimaksu" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="121.0" layoutY="350.0" prefHeight="22.0" prefWidth="169.0" text="Verkkopankkitunnus" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_CENTER" layoutX="121.0" layoutY="398.0" prefHeight="22.0" prefWidth="169.0" text="Salasana" textAlignment="CENTER">
+         <font>
+            <Font name="Noto Sans Cherokee Regular" size="16.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
