--- a/PankKortRekk/src/KorttiRekisteri/TietueDialogGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/TietueDialogGUIView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,17 +12,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="KorttiRekisteri.TietueDialogGUIController">
+<BorderPane stylesheets="@paaikkuna.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.TietueDialogGUIController">
    <bottom>
       <VBox BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="labelVirhe" maxWidth="1000.0" />
             <HBox />
             <ButtonBar prefHeight="40.0" prefWidth="200.0">
-              <buttons>
+               <buttons>
                   <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOK" text="OK" />
                   <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
-              </buttons>
+               </buttons>
                <padding>
                   <Insets right="10.0" />
                </padding>
@@ -39,43 +38,6 @@
                   <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" minWidth="10.0" />
                   <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label text="nimi" />
-                  <Label text="hetu" GridPane.rowIndex="1" />
-                  <Label text="katuosoite" GridPane.rowIndex="2" />
-                  <Label text="postinumero" GridPane.rowIndex="3" />
-                  <Label text="postiosoite" GridPane.rowIndex="4" />
-                  <Label text="kotipuhelin" GridPane.rowIndex="5" />
-                  <Label text="työpuhelin" GridPane.rowIndex="6" />
-                  <Label text="autopuhelin" GridPane.rowIndex="7" />
-                  <Label text="liittymisvuosi" GridPane.rowIndex="8" />
-                  <Label text="jäsenmaksu" GridPane.rowIndex="9" />
-                  <Label text="maksettu maksu" GridPane.rowIndex="10" />
-                  <TextField text="Ankka Aku" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
-                  <TextField text="010245-123U" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                  <TextField text="Paratiisitie 13" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                  <TextField text="12345" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
-                  <TextField text="ANKKALINNA" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
-                  <TextField text="12-12345" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
-                  <TextField text="2" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
-                  <TextField GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" />
-                  <TextField text="1996" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8" />
-                  <TextField text="50.00" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" />
-                  <TextField text="0.00" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" />
-               </children>
                <opaqueInsets>
                   <Insets left="10.0" top="10.0" />
                </opaqueInsets>
